# desktop-Carrier

./: .gitignore  CMakeLists.txt  README.md  main.cpp  zoo.java
include/: carrier.h  dresswin.h  setwin.h
resources/: res.qrc
resources/file/: file.txt
src/: carrier.cpp  dresswin.cpp  setwin.cpp
ui/: carrier.ui  dresswin.ui  setwin.ui  ui_carrier.h  ui_musicwin.h
